TIKA-1997 -- initial poc, derived from rob975's work on: https://github.com/apache/tika/pull/267